# strat-eng

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
cloud-functions/data-ingestion/: main.py  requirements.txt
data/: GOOGL_price_data.csv  NVDA_price_data.csv
docs/: architecture.md  usage.md
infra/: main.tf  outputs.tf  outputs.txt  terraform.tfstate  terraform.tfstate.backup  terraformvars.tfvars  variables.tf
infra/scripts/: startup.sh
k8s/base/: configmap.yaml  deployment.yaml  kustomization.yaml  namespace.yaml  service.yaml
k8s/monitoring/: prometheus-config.yaml  prometheus-deployment.yaml
notebooks/: backtesting_example.ipynb  exploratory_analysis.ipynb
scripts/: deploy.sh  run_backtest.sh
src/: config.py  main.py
src/backtesting/: strategies.py
src/core/: automation.py  tasks.py
src/data/: DB1.DE_price_data.csv  GOOGL_price_data.csv  RHM.DE_price_data.csv  fetcher.py  loaders.py  transforms.py
src/indicators/: ema.py
src/models/: black_scholes.py
src/openopt_riskengine/: __init__.py  cli.py
src/openopt_riskengine/backtesting/: engine.py  metrics.py
src/openopt_riskengine/core/: scheduler.py
src/openopt_riskengine/data/: GOOGL_price_data.csv
src/openopt_riskengine/indicators/: sma.py
src/openopt_riskengine/risk/: measures.py  models.py
src/openopt_riskengine/strategies/: base_strategy.py  (+4 more)
src/strategies/: momentum_strategy.py
src/web/: app.py
tests/integration/: test_end_to_end.py
tests/unit/: test_backtesting.py  test_core.py
(+12 files in other folders)
