[tool.poetry]
name = "openopt-riskengine"
version = "0.1.0"
description = "A risk engine for backtesting and risk assessment."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/yourusername/openopt-riskengine"
repository = "https://github.com/yourusername/openopt-riskengine"
keywords = ["risk", "backtesting", "finance"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21"
pandas = "^1.3"
scikit-learn = "^0.24"
flask = "^2.0"
requests = "^2.25"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
black = "^21.7b0"
mypy = "^0.910"
jupyter = "^1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"