[metadata]
name = OpenOpt-RiskEngine
version = 0.1.0
description = A risk engine for backtesting trading strategies and assessing financial risks.
author = Your Name
author_email = your.email@example.com
url = https://github.com/yourusername/OpenOpt-RiskEngine
license = MIT

[options]
packages = find:
install_requires =
    numpy
    pandas
    scipy
    matplotlib
    flask
    requests

[options.extras_require]
dev =
    pytest
    black
    flake8
    jupyter

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = *Tests
python_functions = test_*